[package]
name = "rust_in_space"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
krpc_mars = { git = "https://github.com/Cahu/krpc-mars" }
log = "0.4.17"
pretty_env_logger = "0.4.0"
chrono = "0.4.22"

[build-dependencies]
glob = "*"
krpc_mars_terraformer = { git = "https://github.com/Cahu/krpc-mars-terraformer" }